# MixInTune

./: README.md  pyproject.toml
core/: main.py  settings.py
core/connections/: redis.py  spotify.py
core/utils/: lifespan.py
integrations/: router.py
integrations/spotify/: auth.py  controllers.py  router.py  schemas.py  sso.py
integrations/spotify/playlists/: schemas.py
mixer/api/v1/: router.py
mixer/service/: schemas.py
